--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -218,7 +218,7 @@
             </intent-filter>
         </activity>
         
-        <activity android:launchMode="singleTask" android:screenOrientation="portrait"
+        <activity android:screenOrientation="portrait"
                 android:name="nz.mega.android.providers.FileProviderActivity"
                 android:label="@string/app_name"
             	android:theme="@style/login_activity">
